@@ -41,5 +41,4 @@ Collate:
     'zzz.R'
 License: Artistic-2.0
 URL: http://online.liebertpub.com/doi/abs/10.1089/omi.2011.0118
-
-Packaged: 2012-02-16 11:11:44 UTC; root
+Packaged: NA
